plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.fao'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    // H2 Database
    runtimeOnly 'com.h2database:h2'
    
    // Test dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    
    // Lombok for boilerplate code reduction
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

// Default test task runs all tests
test {
    useJUnitPlatform()
}

// Task for running only unit tests
task unitTests(type: Test) {
    description = 'Runs all unit tests (classes ending with Test but not IntegrationTest)'
    group = 'verification'
    
    useJUnitPlatform()
    
    // Include test files ending with Test.java but exclude those ending with IntegrationTest.java
    filter {
        includeTestsMatching "*Test"
        excludeTestsMatching "*IntegrationTest"
    }
}
